--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.62.16",
+    "axios": "^1.7.9",
+    "cloudinary": "^2.5.1",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.3",
     "next": "15.1.3",
